Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
4.6.0
-
Untriaged
-
Unknown
Description
If the socket recv call return 0 on a non piped connection, we report this as a SocketError.
In fact this should be reported as SocketClosed.
SocketError should be reserved for the case when the socket recv returns -1
Attachments
For Gerrit Dashboard: MB-22209 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71641,4 | MB-22209: Only report socketError if recv returns an error | master | memcached | Status: MERGED | +2 | +1 |
Build 5.0.0-1612 contains memcached commit 096e4fec3901a8704fa7575ec284bf3e673e1941 with commit message:
MB-22209: Only report socketError if recv returns an errorhttps://github.com/couchbase/memcached/commit/096e4fec3901a8704fa7575ec284bf3e673e1941