MB-22209: Only report socketError if recv returns an error

Currently McbpConnection::tryReadNetwork returns
TryReadResult::SocketError if either recv returns an error (-1) or it
returns zero (indicating that the client closed the connection).

This patch introduces a new state TryReadResult::SocketClosed which
is returned by McbpConnection::tryReadNetwork when the client closes
the connection.

Change-Id: I348d5d5193669ba1e274f3d661b4103525dadd34
Reviewed-on: http://review.couchbase.org/71641
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>